# MethodicConfigurator

./: .codespell-exclude-file  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  ARCHITECTURE_1_software_update.md  ARCHITECTURE_2_flight_controller_communication.md  ARCHITECTURE_3_directory_selection.md  ARCHITECTURE_4_component_editor.md  ARCHITECTURE_5_parameter_editor.md  ARCHITECTURE_TOOLTIP_SYSTEM.md  ARCHITECTURE_accelerometer_calibration.md  ARCHITECTURE_battery_monitor.md  ARCHITECTURE_compass_calibration.md  ARCHITECTURE_motor_test.md  ARCHITECTURE_plugins.md  ARCHITECTURE_rc_calibration.md  BLOG-discuss1.md  BLOG-discuss2.md  BLOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  CUSTOMIZING_CONFIGURATION_STEPS.md  Components.md  Dockerfile  FAQ.md  GOVERNANCE.md  INSTALL.md  LICENSE.md  MANIFEST.in  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  (+76 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
LICENSES/: BSD-2-Clause.txt  LGPL-3.0-or-later.txt  LicenseRef-Inno-Setup.txt  MIT-CMU.txt  PSF-2.0.txt  update_credits_licenses.py
MethodicConfigurator/: ArduCopter_configuration_steps.json  ArduPlane_configuration_steps.json  Frame Diatone Taycan MX-C.json  Rover_configuration_steps.json  __init__.py  annotate_params.py  ardupilot_methodic_configurator.py  argparse_check_range.py  autotest_ardupilot_org.crt  backend_filesystem.py  backend_filesystem_configuration_steps.py  backend_filesystem_program_settings.py  backend_filesystem_vehicle_components.py  backend_flightcontroller.py  backend_flightcontroller_info.py  backend_mavftp.py  backend_mavftp_test.py  battery_cell_voltages.py  common_arguments.py  component_editor.py  configuration_steps_ArduCopter.json  configuration_steps_ArduPlane.json  configuration_steps_Heli.json  configuration_steps_Rover.json  extract_param_defaults.py  fetch_ardupilot_ssl_certificate.py  file_documentation.json  frontend_tkinter.py  frontend_tkinter_base.py  frontend_tkinter_combobox_autocomplete.py  frontend_tkinter_component_editor.py  frontend_tkinter_component_editor_base.py  frontend_tkinter_connection_selection.py  frontend_tkinter_directory_selection.py  frontend_tkinter_entry_dynamic.py  frontend_tkinter_flightcontroller_info.py  frontend_tkinter_pair_tuple_combobox.py  frontend_tkinter_parameter_editor.py  frontend_tkinter_parameter_editor_documentation_frame.py  frontend_tkinter_parameter_editor_table.py  (+10 more)
ardupilot_methodic_configurator/: AP_Motors_test.json  AP_Motors_test_schema.json  __init__.py  __main__.py  annotate_params.py  ardupilot-methodic-configurator.ArgumentCompleters.ps1  ardupilot_methodic_configurator.py  ardupilot_parameter.py  argparse_check_range.py  backend_filesystem.py  backend_filesystem_configuration_steps.py  backend_filesystem_freedesktop.py  backend_filesystem_json_with_schema.py  backend_filesystem_migration.py  backend_filesystem_program_settings.py  backend_filesystem_vehicle_components.py  backend_flightcontroller.py  backend_flightcontroller_business_logic.py  backend_flightcontroller_commands.py  backend_flightcontroller_connection.py  backend_flightcontroller_factory_mavftp.py  backend_flightcontroller_factory_mavlink.py  backend_flightcontroller_factory_serial.py  backend_flightcontroller_files.py  backend_flightcontroller_info.py  backend_flightcontroller_mavftp_utils.py  backend_flightcontroller_mavlink_factory.py  backend_flightcontroller_params.py  backend_flightcontroller_protocols.py  backend_internet.py  backend_mavftp.py  backend_safe_file_io.py  backend_signing_config.py  backend_signing_keystore.py  battery_cell_voltages.py  bitmask_helper.py  business_logic_tempcal_imu.py  common_arguments.py  configuration_manager.py  configuration_steps_ArduCopter.json  (+90 more)
benchmarks/: tooltip_performance.py
credits/: CREDITS.md  Inno_Setup-license.txt  Python_Tkinter_ComboBox-Mozilla_Public_License_version_2.0.html  defusedxml-LICENSE  idna-LICENSE.md  pyserial-LICENSE.txt  screeninfo-LICENSE.md  update-credit-licenses.py  update_credits_licenses.py
images/: ArduPilot_Motor_Thrust_Fit.ods  README.md
linux/: AppRun  ardupilot_methodic_configurator.desktop  ardupilot_methodic_configurator.spec
macos/: ardupilot_methodic_configurator.spec
scripts/: batch_convert_motor_diagrams.py  calculate_code_statistics.py  crawl_ardupilot_wiki.py  crawl_ardupilot_youtube_channel.py  crawl_github_ardupilot.sh  download_motor_diagrams.py  force_format_version.ps1  generate_codebase_pie_chart.py  generate_pdef.xml_metadata.py  list_pypi_build_dependencies.py  list_whl_files.ps1  motor_diagrams_viewer_app.py  regenerate_app_screenshots_fully_automated.py  run_flake8.py  run_sitl_tests.sh  test_renovate.py  ty_check_counts.ps1
sitl/: copter.parm
tests/: acceptance_battery_monitor.py  acceptance_bitmask_parameter_editor_usage_popup.py  acceptance_manual_override.py  acceptance_only_changed_get_uploaded_usage.py  acceptance_recent_vehicle_directories_history.py  acceptance_software_update.py  acceptance_template_import_from_params.py  acceptance_use_fc_params_from_file.py  acceptance_zip_for_forum_help.py  annotate_params_test.sh  backend_filesystem_test.py  battery_cell_voltages_test.py  bdd_backend_filesystem_program_settings_port_save.py  bdd_backend_flightcontroller_signing.py  bdd_backend_safe_file_io.py  bdd_backend_signing_keystore.py  bdd_battery_monitor.py  bdd_data_model_recent_items_history_list.py  bdd_data_model_signing_config.py  bdd_frontend_tkinter_show.py  bdd_signing_config.py  bdd_signing_keystore.py  bdd_signing_sitl_integration.py  bdd_software_update.py  common_arguments_test.py  conftest.py  frontend_tkinter_parameter_editor_documentation_frame_test.py  gettext_capture_helper.py  gui_frontend_tkinter_component_editor.py  gui_frontend_tkinter_parameter_editor.py  gui_frontend_tkinter_parameter_editor_table.py  gui_frontend_tkinter_show.py  integration_backend_log_extraction.py  integration_backend_signing_config.py  (+182 more)
(+1716 files in other folders)
