[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ardupilot_methodic_configurator"
authors = [
    {name = "Amilcar do Carmo Lucas", email = "amilcar.lucas@iav.de"},
]
maintainers = [
    {name = "Amilcar do Carmo Lucas", email = "amilcar.lucas@iav.de"},
]
description = "A clear configuration sequence for ArduPilot vehicles"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = ["ArduPilot", "Configuration", "SCM", "Methodic", "ArduCopter", "ArduPlane", "ArduRover", "ArduSub"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md", "LICENSES/*.txt", "credits/CREDITS.md"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: German",
    "Natural Language :: Portuguese",
    "Natural Language :: Italian",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Installation/Setup",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "argcomplete==3.6.2",
    "defusedxml==0.7.1",
    "jsonschema==4.25.1",
    "matplotlib==3.9.4; python_version < '3.10'",
    "matplotlib==3.10.3; python_version >= '3.10'",
    "numpy==2.0.2; python_version < '3.13'",
    "numpy==2.2.2; python_version >= '3.13'",
    "pillow==11.3.0",
    "pip_system_certs==4.0",
    "platformdirs==4.3.8",
    "pymavlink==2.4.49",
    "pyserial==3.5",
    "requests==2.32.5",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage==7.10.5",
    "mock==5.2.0",
    "mypy==1.17.1",
    "pre-commit==4.3.0",
    "pylint==3.3.8",
    "pyright==1.1.404",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-md==0.2.0",
    "pytest-mock==3.14.1",
    "python-gettext==5.0",
    "ruff==0.12.10",
    "types-requests==2.32.4.20250809",
]

scripts = [
    "bs4",
]

pypi_dist = [
    "build==1.3.0",
    "packaging==25.0",
    "setuptools==80.9.0",
    "wheel==0.45.1",
]

win_dist = [
    "wheel==0.45.1",
    "pip==25.2",
    "pywin32==311",
    "pyinstaller==6.15.0",
    "packaging==25.0",
]

[project.scripts]
ardupilot_methodic_configurator = "ardupilot_methodic_configurator.__main__:main"
extract_param_defaults = "ardupilot_methodic_configurator.extract_param_defaults:main"
annotate_params = "ardupilot_methodic_configurator.annotate_params:main"
param_pid_adjustment_update = "ardupilot_methodic_configurator.param_pid_adjustment_update:main"
mavftp = "ardupilot_methodic_configurator.backend_mavftp:main"

[project.entry-points."argcomplete.completers"]
ardupilot_methodic_configurator = "ardupilot_methodic_configurator.__main__:create_argument_parser"
extract_param_defaults = "ardupilot_methodic_configurator.extract_param_defaults:create_argument_parser"
annotate_params = "ardupilot_methodic_configurator.annotate_params:create_argument_parser"
param_pid_adjustment_update = "ardupilot_methodic_configurator.param_pid_adjustment_update:create_argument_parser"
mavftp = "ardupilot_methodic_configurator.backend_mavftp:create_argument_parser"

[project.urls]
homepage = "https://ardupilot.github.io/MethodicConfigurator/"
documentation = "https://github.com/ArduPilot/MethodicConfigurator/blob/master/USERMANUAL.md"
issues = "https://github.com/ArduPilot/MethodicConfigurator/issues"
source = "https://github.com/ArduPilot/MethodicConfigurator"
forum = "https://discuss.ardupilot.org/t/new-ardupilot-methodic-configurator-gui/115038/"
chat = "https://discord.com/invite/ArduPilot"
download = "https://github.com/ArduPilot/MethodicConfigurator/releases"
changelog = "https://github.com/ArduPilot/MethodicConfigurator/releases"

[tool.setuptools]
packages = ["ardupilot_methodic_configurator"]

[tool.setuptools.package-data]
ardupilot_methodic_configurator = ["*.param", "*.jpg", "*.json", "*.xml", "*.mo", "*.png"]

[tool.setuptools.dynamic]
version = {attr = "ardupilot_methodic_configurator.__version__"}

[tool.codespell]
check-filenames = true
ignore-words-list = "datas,intoto,juli,laf,ned,parm,sade,sitl,thst"
skip = "*.pdef.xml,*.pdf,*.po"

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "__target__",
    "dist",
]

# https://docs.astral.sh/ruff/rules/
lint.select = [
    "F",    # Pyflakes
    "E",    # pycodestyle -Error
    "W",    # pycodestyle - Warning
    "C90",  # maccabe
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    #"ERA",  # eradicate
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    #"BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    #"FIX",  # flake8-fixme
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print (T20)
    "PYI",  # flake8-pyi (PYI)
    "PT",   # flake8-pytest-style (PT)
    "Q",    # flake8-quotes (Q)
    "RSE",  # flake8-raise (RSE)
    "RET",  # flake8-return (RET)
    "SLF",  # flake8-self (SLF)
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots (SLOT)
    "TID",  # flake8-tidy-imports
    #"TD",   # flake8-todos
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    #"PTH",  # flake8-use-pathlib
    "INT",  # flake8-gettext
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "FLY",  # flynt
    "PERF", # Performance-related issues
    "FURB", # refurb
    "DOC",  # pydoclint
    "RUF",  # Ruff-specific codes
]

lint.ignore = [
    "ISC001",  # to let formatter run
    "ANN002",
    "ANN003",
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D107",    # Missing docstring in `__init__`
    "D203",    #
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line of docstring should be in imperative mood
    "COM812",
    "DTZ005",  # `tz=None` passed to `datetime.datetime.now()`
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "LOG015",  # `error()` call on root logger, Use own logger instead
]

line-length = 127
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "UP031", "ARG002", "ANN001", "S101", "SLF001"]
"ardupilot_methodic_configurator/backend_mavftp.py" = ["PGH004", "N801", "ANN001"]
"ardupilot_methodic_configurator/backend_mavftp_example.py" = ["ANN001"]
"ardupilot_methodic_configurator/tempcal_imu.py" = ["ANN001"]

[tool.ruff.lint.mccabe]
max-complexity = 22  # Default is 10

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "float", "int", "str"]
max-args = 9       # Default is 5
max-branches = 24  # Default is 12

[tool.mypy]
ignore_missing_imports = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_generics = false
disallow_any_explicit = false
disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true

files = ["ardupilot_methodic_configurator/*.py"]
exclude = ["tests"]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.9"
venvPath = "."
venv = ".venv"
